--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -1852,7 +1852,8 @@ a code {
 .icon-single-white-star-on-black-circle,
 .icon-moon-solid, .icon-book-open-solid,
 .icon-message-slash-solid, .icon-magnifying-glass,
-.icon-gear-solid, .icon-sun-solid, .icon-eye-slash-solid {
+.icon-gear-solid, .icon-sun-solid, .icon-eye-slash-solid,
+.icon-manicule-left, .icon-manicule-right {
     position: relative;
     background-color: var(--link-underline-background-color); }
 
@@ -1861,10 +1862,10 @@ a code {
 
 .icon-moon-solid, .icon-book-open-solid, .icon-message-slash-solid,
 .icon-gear-solid, .icon-sun-solid, .icon-eye-slash-solid { margin: 0.1em;
-                                                           padding: 0.4em;
+                                                           padding-left: 0.8em;
                                                            opacity: 70%; }
 .icon-magnifying-glass { margin: 0.1em;
-                         padding: 0.4em;
+                         padding: 0.6em;
                          opacity: 90%; }
 .has-recently-modified-icon .recently-modified-icon-hook::before,
 .icon-single-white-star-on-black-circle::before,
@@ -1888,15 +1889,15 @@ a code {
     opacity: 0.75;
 }
 .icon-single-white-star-on-black-circle::before { background-position: center; }
-.icon-moon-solid::before          { background-image: url('/static/img/icon/icons.svg?v=1728141089#moon-solid'); }
-.icon-book-open-solid::before     { background-image: url('/static/img/icon/icons.svg?v=1728141089#book-open-solid'); }
-.icon-message-slash-solid::before { background-image: url('/static/img/icon/icons.svg?v=1728141089#message-slash-solid'); }
-.icon-magnifying-glass::before    { background-image: url('/static/img/icon/icons.svg?v=1728141089#magnifying-glass'); }
-.icon-gear-solid::before          { background-image: url('/static/img/icon/icons.svg?v=1728141089#gear-solid'); }
-.icon-sun-solid::before           { background-image: url('/static/img/icon/icons.svg?v=1728141089#sun-solid'); }
-.icon-eye-slash-solid::before     { background-image: url('/static/img/icon/icons.svg?v=1728141089#eye-slash-solid'); }
-.icon-manicule-right::before      { background-image: url('/static/img/icon/icons.svg?v=1728141089#manicule-right'); }
-.icon-manicule-left::before       { background-image: url('/static/img/icon/icons.svg?v=1728141089#manicule-left'); }
+.icon-moon-solid::before          { background-image: url('/static/img/icon/icons.svg?v=1728147531#moon-solid'); }
+.icon-book-open-solid::before     { background-image: url('/static/img/icon/icons.svg?v=1728147531#book-open-solid'); }
+.icon-message-slash-solid::before { background-image: url('/static/img/icon/icons.svg?v=1728147531#message-slash-solid'); }
+.icon-magnifying-glass::before    { background-image: url('/static/img/icon/icons.svg?v=1728147531#magnifying-glass'); }
+.icon-gear-solid::before          { background-image: url('/static/img/icon/icons.svg?v=1728147531#gear-solid'); }
+.icon-sun-solid::before           { background-image: url('/static/img/icon/icons.svg?v=1728147531#sun-solid'); }
+.icon-eye-slash-solid::before     { background-image: url('/static/img/icon/icons.svg?v=1728147531#eye-slash-solid'); }
+.icon-manicule-right::before      { background-image: url('/static/img/icon/icons.svg?v=1728147531#manicule-right'); }
+.icon-manicule-left::before       { background-image: url('/static/img/icon/icons.svg?v=1728147531#manicule-left'); }
 
 /*************/
 /* SIDENOTES */
