--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2486,18 +2486,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1728676325#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1728147531#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1728676325#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1728147531#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1728676325#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1728147531#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1728676325#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1728147531#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -4686,14 +4686,14 @@ ol.link-bibliography-list-compact > li::before {
 /*******************************/
 
 /*=-------------=*/
-/*= /static/404 =*/
+/*= /404 =*/
 /*=-------------=*/
 
-body.page-static-404 figure .figure-inner-wrapper {
+body.page-404 figure .figure-inner-wrapper {
     padding: 0 1em;
 }
 
-body.page-static-404 figure figcaption {
+body.page-404 figure figcaption {
     margin-top: 0.5em;
 }
 
@@ -5591,7 +5591,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1728676325#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1728147531#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5772,7 +5772,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1728676325#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1728147531#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6220,7 +6220,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1728676325#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1728147531#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7173,7 +7173,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1728676325#question');
+    background-image: url('/static/img/icon/icons.svg?v=1728147531#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7383,7 +7383,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1728676325#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1728147531#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -7765,7 +7765,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1728676325#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1728147531#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7844,7 +7844,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1728676325#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1728147531#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
