--- a/template/default.html
+++ b/template/default.html
@@ -119,8 +119,8 @@
           $if(tagsHTML)$ $tagsHTML$ $endif$
           $if(description)$<div class="page-description"><p>$description$</p></div>$endif$
           <div class="page-metadata-fields">
-              $if(author)$ <span class="page-author" title="Author of this page.">by: <em>$author$</em></span>$endif$
-              <span class="page-date-range"><span class="page-creation" title="Date page contents were begun."><em>$created$</em></span>–<span class="page-source"><a title="Link to latest revision of the raw Markdown text source for this page, '$title-plain$': $url$.md" href="$url$.md"><span class="page-modified" title="Date of last major modification to this page."><em>$modified$</em></span></a></span></span>
+              $if(author)$<span class="page-author" title="Author of this page.">by: <em>$author$</em></span>$endif$
+              $if(date-range-HTML)$<span class="page-date-range">$date-range-HTML$</span>$endif$
               <span class="page-status" title="Writing status of current page: ranges 'abandoned'/'notes'/'draft'/'in progress'/'finished'"><em>$status$</em></span>
               <span class="page-confidence"><a href="/about#confidence-tags" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')">certainty</a>: <em>$confidence$</em></span>
               <span class="page-importance"><a href="/about#importance-tags" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world.">importance</a>: <em>$importance$</em></span>
