--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -2584,6 +2584,7 @@ body.reader-mode-active #sidenote-column-right,
 body.reader-mode-active #navigation,
 body.reader-mode-active #footer,
 body.reader-mode-active .inflation-adjusted .subsup,
+body.reader-mode-active .has-recently-modified-icon .recently-modified-icon-hook
 body.reader-mode-active .date-range sub {
     display: none;
 }
