default.css: print-mode: hide the underlining of the dropcap as it is confusing & makes no sense to someone reading a printed version (since the dropcap is not printed, nor can they hover it to get an explanation of said dropcap)

--- a/css/default.css
+++ b/css/default.css
@@ -6791,6 +6791,9 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
         text-underline-position: from-font;
         text-underline-offset: -0.05em;
     }
+    .markdownBody p a:link.link-dropcap {
+        text-decoration: none;
+    }
 
     /*  Label the page tags, as offline/in-print, they will look quite
         mysterious.
