--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -781,15 +781,15 @@ figure img[src$=".svg"]:not(.invert):not(.invert-auto) {
 /*  The ‘celestial symbol’ horizontal rules are SVGs and must be inverted.
  */
 hr::after,
-.horizontal-rule-nth-0 hr::after {
+div.horizontal-rule-nth-0 hr::after {
     opacity: 1;
     filter: invert(1) drop-shadow(0 0 0 currentColor);
 }
-.horizontal-rule-nth-1 hr::after {
+div.horizontal-rule-nth-1 hr::after {
     opacity: 0.75;
     filter: invert(1);
 }
-.horizontal-rule-nth-2 hr::after {
+div.horizontal-rule-nth-2 hr::after {
     opacity: 0.85;
     filter: invert(1);
 }
@@ -967,6 +967,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
     background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1729686157">
-<script src="/static/js/head.js?v=1730047055"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1730128166">
+<script src="/static/js/head.js?v=1730128165"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1728676325" as="image">
