--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -1889,15 +1889,15 @@ a code {
     opacity: 0.75;
 }
 .icon-single-white-star-on-black-circle::before { background-position: center; }
-.icon-moon-solid::before          { background-image: url('/static/img/icon/icons.svg?v=1728147531#moon-solid'); }
-.icon-book-open-solid::before     { background-image: url('/static/img/icon/icons.svg?v=1728147531#book-open-solid'); }
-.icon-message-slash-solid::before { background-image: url('/static/img/icon/icons.svg?v=1728147531#message-slash-solid'); }
-.icon-magnifying-glass::before    { background-image: url('/static/img/icon/icons.svg?v=1728147531#magnifying-glass'); }
-.icon-gear-solid::before          { background-image: url('/static/img/icon/icons.svg?v=1728147531#gear-solid'); }
-.icon-sun-solid::before           { background-image: url('/static/img/icon/icons.svg?v=1728147531#sun-solid'); }
-.icon-eye-slash-solid::before     { background-image: url('/static/img/icon/icons.svg?v=1728147531#eye-slash-solid'); }
-.icon-manicule-right::before      { background-image: url('/static/img/icon/icons.svg?v=1728147531#manicule-right'); }
-.icon-manicule-left::before       { background-image: url('/static/img/icon/icons.svg?v=1728147531#manicule-left'); }
+.icon-moon-solid::before          { background-image: url('/static/img/icon/icons.svg?v=1728676325#moon-solid'); }
+.icon-book-open-solid::before     { background-image: url('/static/img/icon/icons.svg?v=1728676325#book-open-solid'); }
+.icon-message-slash-solid::before { background-image: url('/static/img/icon/icons.svg?v=1728676325#message-slash-solid'); }
+.icon-magnifying-glass::before    { background-image: url('/static/img/icon/icons.svg?v=1728676325#magnifying-glass'); }
+.icon-gear-solid::before          { background-image: url('/static/img/icon/icons.svg?v=1728676325#gear-solid'); }
+.icon-sun-solid::before           { background-image: url('/static/img/icon/icons.svg?v=1728676325#sun-solid'); }
+.icon-eye-slash-solid::before     { background-image: url('/static/img/icon/icons.svg?v=1728676325#eye-slash-solid'); }
+.icon-manicule-right::before      { background-image: url('/static/img/icon/icons.svg?v=1728676325#manicule-right'); }
+.icon-manicule-left::before       { background-image: url('/static/img/icon/icons.svg?v=1728676325#manicule-left'); }
 
 /*************/
 /* SIDENOTES */
@@ -2324,6 +2324,37 @@ body.special-halloween-dark #sidebar span.logo-image img {
             left: -30%; top: -10%;
         }
     }
+}
+
+body.special-halloween-dark hr::after {
+	filter: none;
+    opacity: 1;
+}
+body.special-halloween-dark hr::after,
+body.special-halloween-dark .horizontal-rule-nth-0 hr::after {
+    background-image: url('/static/img/ornament/halloween/sun-verginasun-black.svg');
+}
+body.special-halloween-dark .horizontal-rule-nth-1 hr::after {
+    background-image: url('/static/img/ornament/halloween/japanesecrest-tsukinihoshi-dottedmoon.svg');
+}
+body.special-halloween-dark .horizontal-rule-nth-2 hr::after {
+    background-image: url('/static/img/ornament/halloween/asterism-triplewhitestar.svg');
+}
+
+body.special-halloween-dark #x-of-the-day::before,
+body.special-halloween-dark #x-of-the-day::after {
+    background-image:
+        url('/static/img/ornament/halloween/three-wavy-lines-ornament-left.svg'),
+        url('/static/img/ornament/halloween/three-wavy-lines-ornament-right.svg');
+    filter: none;
+    opacity: 0.75;
+}
+body.special-halloween-dark #x-of-the-day .site-of-the-day blockquote {
+    background-image: url('/static/img/ornament/halloween/swissspiralroll.svg#svgView(preserveAspectRatio(none))');
+}
+body.special-halloween-dark #x-of-the-day .site-of-the-day blockquote::before,
+body.special-halloween-dark #x-of-the-day .site-of-the-day blockquote::after {
+    background-image: url('/static/img/ornament/halloween/swissspiralroll.svg');
 }
 
 /*  Styles for /index
