Make Halloween and Christmas page logos link to /dropcap

--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -2374,6 +2374,10 @@ body.page-index.special-halloween-dark #sidebar a:hover {
     color: var(--GW-blood-red);
 }
 
+body.page-index.special-halloween-dark #sidebar a.logo {
+	pointer-events: auto;
+}
+
 /*=-----------=*/
 /*= Christmas =*/
 /*=-----------=*/
@@ -2547,6 +2551,10 @@ body[class*='special-christmas'] #sidebar span.logo-image img {
  */
 body.page-index[class*='special-christmas'] #sidebar a:hover {
     color: var(--GW-holly-leaf-green);
+}
+
+body.page-index[class*='special-christmas'] #sidebar a.logo {
+	pointer-events: auto;
 }
 @charset "UTF-8";
 
