--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -8181,6 +8181,10 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 /*= COMMON STYLES =*/
 /*=================*/
 
+a[data-link-icon][data-link-icon-color]:hover {
+	--link-underline-gradient-line-color: var(--link-icon-color-hover);
+}
+
 /*******************/
 /*  Graphical icons.
     */
